kasten/kasten-hourly-rpo/.chainsaw-test/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-namespace
  labels:
    appPriority: critical
