kasten/kasten-hourly-rpo/.chainsaw-test/chainsaw-step-01-assert-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: kasten-hourly-rpo
status:
  ready: true
